<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".ui.loginRegister.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/rg_logo"
                    android:layout_width="340dp"
                    android:layout_height="302dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/lk_logo"
                    android:src="@drawable/logo1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:id="@+id/rg_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/rg_register"
                    android:textColor="#FFFFFF"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_logo" />

                <TextView
                    android:id="@+id/rg_nama_perusahaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/rg_nama_perusahaan"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_register" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rg_coll_nama_perusahaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_nama_perusahaan">

                    <EditText
                        android:id="@+id/rg_isiform_nama_perusahaan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:padding="2dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/rg_isiform_nama_perusahaan"
                        android:fontFamily="@font/nunito_semibold"
                        android:inputType="textPersonName"
                        android:textColorHint="#6F6F6F"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/rg_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/rg_email"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_coll_nama_perusahaan" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rg_coll_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_email">

                    <EditText
                        android:id="@+id/rg_isiform_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/rg_isiform_email"
                        android:inputType="textEmailAddress"
                        android:padding="2dp"
                        android:textColorHint="#6F6F6F"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/rg_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_semibold"
                    android:text="@string/rg_password"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_coll_email" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/rg_coll_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_password">

                    <EditText
                        android:id="@+id/rg_isiform_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:autofillHints=""
                        android:background="@android:color/transparent"
                        android:fontFamily="@font/nunito_semibold"
                        android:hint="@string/rg_isiform_password"
                        android:inputType="textPassword"
                        android:padding="2dp"
                        android:textColorHint="#6F6F6F"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <Button
                    android:id="@+id/rg_button_daftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/pick_background_menu"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/rg_button_daftar"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:backgroundTint="@color/orange"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_coll_password"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />


                <TextView
                    android:id="@+id/rg_punyaakun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/nunito"
                    android:gravity="center"
                    android:text="@string/rg_punyaakun"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rg_button_daftar"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/rg_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/nunito_bold"
                    android:gravity="center"
                    android:text="@string/rg_login"
                    android:textColor="#F6894C"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rg_punyaakun"
                    app:layout_constraintStart_toEndOf="@+id/rg_punyaakun"
                    app:layout_constraintTop_toTopOf="@+id/rg_punyaakun"
                    tools:ignore="TextContrastCheck" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
